src/tests/snapshots/hebi__tests__simple__cmp_le.snap
---
source: src/tests/simple.rs
expression: snapshot
---
# Input:
2 <= 2

# Result (success):
true

# Stdout:


