src/tests/snapshots/hebi__tests__simple__cmp_neq.snap
---
source: src/tests/simple.rs
expression: snapshot
---
# Modules:


# Input:
2 != 2

# Result (success):
false

# Stdout:


