src/tests/snapshots/hebi__tests__simple__minus_n.snap
---
source: src/tests/simple.rs
expression: snapshot
---
# Modules:


# Input:
-2

# Result (success):
-2

# Stdout:


