src/tests/snapshots/hebi__tests__simple__mul.snap
---
source: src/tests/simple.rs
expression: snapshot
---
# Modules:


# Input:
2 * 2

# Result (success):
4

# Stdout:


