src/tests/snapshots/hebi__tests__simple__not_false.snap
---
source: src/tests/simple.rs
expression: snapshot
---
# Modules:


# Input:
!false

# Result (success):
true

# Stdout:


