src/tests/snapshots/hebi__tests__simple__not_true.snap
---
source: src/tests/simple.rs
expression: snapshot
---
# Input:
!true

# Result (success):
false

# Stdout:


